--- a/src/main/resources/templates/user/layout/default_layout.html
+++ b/src/main/resources/templates/user/layout/default_layout.html
@@ -5,6 +5,7 @@
 <!-- Latest jQuery -->
 <script th:src="@{/user/assets/js/jquery-3.6.0.min.js}"></script>
 <script th:src="@{/user/assets/js/interest-tag.js}"></script>
+<script th:src="@{/valid.js}"></script>
 
 <head th:replace="~{/user/fragments/head :: headFragment}"></head>
 
