--- a/src/main/resources/templates/admin/content/pages/cs/list.html
+++ b/src/main/resources/templates/admin/content/pages/cs/list.html
@@ -51,7 +51,8 @@
 									</tr>
 									<tr>
 										<th scope="row">관심사</th>
-										<td th:text="${question.account.interest}"></td>
+										<td><input class="interest" readonly
+										           th:value="${question.account.interest}"/></td>
 									</tr>
 									<tr>
 										<th scope="row">핸드폰 번호</th>
@@ -140,6 +141,12 @@
 
             return false;
         }
+
+        $('.modal').on('show.bs.modal', function (e) {
+            let ele = e.target.querySelector("input[class='interest']");
+            loadingTag(ele);
+        });
+
 	</script>
 
 	<h1 class="mt-4">문의 내역</h1>
@@ -175,6 +182,7 @@
 				<td th:text="${#temporals.format(question.questionAt, 'yyyy년 MM월 dd일 HH시 mm분')}"></td>
 				<td>
 					<a id="detailBtn" data-bs-toggle="modal" th:attr="data-bs-target=${'#detailModal'+ question.id}">
+						<!--						th:onclick=" 'loadingTag($(' + '\'interst' + ${question.id} + '\'));'"-->
 						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
 						     class="bi bi-search" viewBox="0 0 16 16">
 							<path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
