--- a/src/main/resources/templates/admin/fragments/sidebar.html
+++ b/src/main/resources/templates/admin/fragments/sidebar.html
@@ -40,7 +40,7 @@
 				<div class="collapse" id="collapseLayouts" aria-labelledby="headingOne"
 				     data-bs-parent="#sidenavAccordion">
 					<nav class="sb-sidenav-menu-nested nav">
-						<a class="nav-link" th:href="@{/pages/art-view}">목록 확인 및 수정</a>
+						<a class="nav-link" th:href="@{/admin/account/list}">목록 확인 및 수정</a>
 					</nav>
 				</div>
 
@@ -141,25 +141,46 @@
 					</nav>
 				</div>
 
-				<a class="nav-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapsePages"
-				   aria-expanded="false" aria-controls="collapsePages">
+				<div class="sb-sidenav-menu-heading">홈페이지 관리</div>
+				<a class="nav-link" th:href="@{/admin/notice/list}">
+					<div class="sb-nav-link-icon">
+						<svg class="svg-inline--fa fa-arrow-right-from-bracket" aria-hidden="true" focusable="false"
+						     role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg="">
+						</svg><!-- <i class="fas fa-chart-area"></i> Font Awesome fontawesome.com --></div>
+					공지사항 관리
+				</a>
+
+				<a class="nav-link" th:href="@{/admin/banner/list}">
+					<div class="sb-nav-link-icon">
+						<svg class="svg-inline--fa fa-arrow-right-from-bracket" aria-hidden="true" focusable="false"
+						     role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg="">
+						</svg><!-- <i class="fas fa-chart-area"></i> Font Awesome fontawesome.com --></div>
+					배너 관리
+				</a>
+
+				<a class="nav-link collapsed" data-bs-toggle="collapse" data-bs-target="#popupAdmin"
+				   aria-expanded="false" aria-controls="popupAdmin">
 					<div class="sb-nav-link-icon">
 						<svg class="svg-inline--fa fa-book-open" aria-hidden="true" focusable="false" data-prefix="fas"
-						     data-icon="book-open" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"
+						     data-icon="book-open" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="30 0 270 250"
 						     data-fa-i2svg="">
-							<path fill="currentColor" d="M143.891,239.576c53.747,0,97.473-43.725,97.473-97.472s-43.725-97.472-97.473-97.472
-                  c-53.747,0-97.472,43.725-97.472,97.472C46.419,195.849,90.144,239.576,143.891,239.576z"></path>
-							<path fill="currentColor" d="M143.893,256.635C64.55,256.635,0,321.18,0,400.516v48.799c0,9.974,8.086,18.06,18.06,18.06h251.654
-				c9.974,0,18.06-8.086,18.06-18.06v-48.799C287.774,321.553,223.913,256.635,143.893,256.635z"></path>
-							<path fill="currentColor" d="M277.204,288.878c-2.526,2.061-2.896,5.777-0.887,8.344c40.646,51.985,35.539,98.905,35.539,152.094
-				c0,3.649-0.467,7.19-1.345,10.57c-0.986,3.796,1.906,7.49,5.829,7.49h177.6c9.974,0,18.06-8.086,18.06-18.06v-48.799
-				C512,278.194,369.744,213.381,277.204,288.878z"></path>
-							<path fill="currentColor" d="M270.641,222.44L270.641,222.44c0,9.974,8.086,18.06,18.06,18.06h158.823c9.974,0,18.06-8.086,18.06-18.06v-80.333
-				c0-0.001,0-0.002,0-0.002c-0.005-53.964-44.013-97.482-97.478-97.482c-55.908,0-99.56,46.932-97.466,101.414V222.44z
-				 M306.791,139.032h122.598c1.735,35.174-26.395,64.421-61.281,64.421C332.511,203.453,304.98,173.234,306.791,139.032z"></path>
+							<path fill="currentColor"
+							      d="M50 160 l0 -110 37 0 c20 0 45 -7 55 -17 17 -15 19 -15 36 0 10 10 35 17 55 17 l37 0 0 110 0 110 -110 0 -110 0 0 -110z m200 0 l0 -90 -33 0 c-18 0 -38 -5 -45 -12 -9 -9 -15 -9 -24 0 -7 7 -27 12 -45 12 l-33 0 0 90 0 90 90 0 90 0 0 -90z"/>
+							<path fill="currentColor"
+							      d="M100 200 c0 -5 5 -10 10 -10 6 0 10 5 10 10 0 6 -4 10 -10 10 -5 0 -10 -4 -10 -10z"/>
+							<path fill="currentColor"
+							      d="M140 200 c0 -5 18 -10 40 -10 22 0 40 5 40 10 0 6 -18 10 -40 10 -22 0 -40 -4 -40 -10z"/>
+							<path fill="currentColor"
+							      d="M100 160 c0 -5 5 -10 10 -10 6 0 10 5 10 10 0 6 -4 10 -10 10 -5 0 -10 -4 -10 -10z"/>
+							<path fill="currentColor"
+							      d="M140 160 c0 -5 18 -10 40 -10 22 0 40 5 40 10 0 6 -18 10 -40 10 -22 0 -40 -4 -40 -10z"/>
+							<path fill="currentColor"
+							      d="M100 120 c0 -5 5 -10 10 -10 6 0 10 5 10 10 0 6 -4 10 -10 10 -5 0 -10 -4 -10 -10z"/>
+							<path fill="currentColor"
+							      d="M140 120 c0 -5 18 -10 40 -10 22 0 40 5 40 10 0 6 -18 10 -40 10 -22 0 -40 -4 -40 -10z"/>
 						</svg>
 					</div>
-					사이트 관리
+					팝업 관리
 					<div class="sb-sidenav-collapse-arrow">
 						<svg class="svg-inline--fa fa-angle-down" aria-hidden="true" focusable="false" data-prefix="fas"
 						     data-icon="angle-down" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"
@@ -168,13 +189,11 @@
 							      d="M192 384c-8.188 0-16.38-3.125-22.62-9.375l-160-160c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L192 306.8l137.4-137.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-160 160C208.4 380.9 200.2 384 192 384z"></path>
 						</svg><!-- <i class="fas fa-angle-down"></i> Font Awesome fontawesome.com --></div>
 				</a>
-				<div class="collapse" id="collapsePages" aria-labelledby="headingOne"
+				<div class="collapse" id="popupAdmin" aria-labelledby="headingOne"
 				     data-bs-parent="#sidenavAccordion">
 					<nav class="sb-sidenav-menu-nested nav">
-						<a class="nav-link" th:href="@{/pages/part-new}">메인 배너 관리</a>
 						<a class="nav-link" th:href="@{/admin/popup/list}">팝업 관리</a>
 						<a class="nav-link" th:href="@{/admin/popup/create}">팝업 생성</a>
-						<a class="nav-link" th:href="@{/admin/notice/list}">공지사항 관리</a>
 					</nav>
 				</div>
 
