--- a/src/main/resources/templates/user/fragments/head.html
+++ b/src/main/resources/templates/user/fragments/head.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head th:fragment="headFragment">
+	<!-- Google tag (gtag.js) -->
+	<!-- 애널리틱스 -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-YPF4GGL102"></script>
+	<script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+
+        gtag('config', 'G-YPF4GGL102');
+	</script>
+
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta content="Anil z" name="author">
@@ -16,7 +31,7 @@
 	<!-- Favicon Icon -->
 
 
-	<link rel="shortcut icon" type="image/x-icon" th:href="@{/user/assets/images/favicon.png}">
+	<link rel="shortcut icon" th:href="@{/favicon.ico}">
 	<!-- Animation CSS -->
 	<link rel="stylesheet" th:href="@{/user/assets/css/animate.css}">
 	<!-- Latest Bootstrap min CSS -->
@@ -59,4 +74,5 @@
         }
 	</style>
 </head>
+
 </html>
